--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.NoTitleBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,15 +25,35 @@
         </activity>
         <activity
             android:name=".SleepActivity"
-            android:label="@string/app_name" >
+            android:theme="@android:style/Theme.Wallpaper.NoTitleBar" >
         </activity>
         <activity
             android:name=".RunActivity"
-            android:label="@string/app_name" >
+            android:theme="@android:style/Theme.Wallpaper.NoTitleBar" >
         </activity>
         <activity
             android:name=".CookActivity"
-            android:label="@string/app_name" >
+            android:theme="@android:style/Theme.Wallpaper.NoTitleBar" >
+        </activity>
+        <activity
+            android:name=".SelfActivity"
+            android:theme="@android:style/Theme.Wallpaper.NoTitleBar" >
+        </activity>
+        <activity
+            android:name=".SleepNActivity"
+            android:theme="@android:style/Theme.Wallpaper.NoTitleBar" >
+        </activity>
+        <activity
+            android:name=".RunNActivity"
+            android:theme="@android:style/Theme.Wallpaper.NoTitleBar" >
+        </activity>
+        <activity
+            android:name=".CookNActivity"
+            android:theme="@android:style/Theme.Wallpaper.NoTitleBar" >
+        </activity>
+        <activity
+            android:name=".SelfNActivity"
+            android:theme="@android:style/Theme.Wallpaper.NoTitleBar" >
         </activity>
         <activity
             android:name=".ShakePhone"
